fixed marquee on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,7 @@ form button:hover {
   display:flex;
   overflow:hidden;
   user-select:none;
+  height:4.2em;
 }
 
 .marquee-content {
@@ -593,10 +594,48 @@ form button:hover {
   animation:scroll 15s linear infinite;
   margin:0;
   padding:0 0 0 30px;
+  flex-wrap: wrap;
 }
 
 .marquee-content li {
   margin:0;
+  font-style:italic;
+}
+
+@-webkit-keyframes scroll {
+  from {
+    transform:translateX(0);
+  }
+  to {
+    transform:translateX(-100%);
+  }
+}
+
+@-moz-keyframes scroll {
+  from {
+    transform:translateX(0);
+  }
+  to {
+    transform:translateX(-100%);
+  }
+}
+
+@-ms-keyframes scroll {
+  from {
+    -ms-transform:translateX(-100%);
+  }
+  to {
+    -ms-transform:translateX(-100%);
+  }
+}
+
+@-o-keyframes scroll {
+  from {
+    transform:translateX(0);
+  }
+  to {
+    transform:translateX(-100%);
+  }
 }
 
 @keyframes scroll {
@@ -604,6 +643,6 @@ form button:hover {
     transform:translateX(0);
   }
   to {
-    transform:translateX(calc(-100%));
+    transform:translateX(-100%);
   }
 }
